made the footer a partial

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -855,7 +855,6 @@ video.ipad-device {
 
 <%= render 'homepage/partials/navbar' %>
 
-
 <div class="splash-new">
   <div
     class="splash-container"
@@ -947,6 +946,9 @@ video.ipad-device {
 
   </div>
 </section>
+
+<%= render 'homepage/partials/footer' %>
+
 
 <script type="text/javascript">
 
