migrate to cloudfront from s3

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -312,7 +312,7 @@
     }
 
     .splash-new .splash-container {
-      background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/hero/student-hero-blue-desktop-min.jpg')
+      background: url('https://d39onmifexd5hc.cloudfront.net/website/homepage/hero/student-hero-blue-desktop-min.jpg')
           center
           top/cover
           no-repeat
@@ -475,7 +475,7 @@
     }
 
     div.splash-container {
-        background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/hero/student-hero-blue-tablet-min.jpg')
+        background: url('https://d39onmifexd5hc.cloudfront.net/website/homepage/hero/student-hero-blue-tablet-min.jpg')
           center
           top/cover
           no-repeat
@@ -539,7 +539,7 @@
     }
 
     div.splash-container {
-        background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/hero/student-hero-blue-tablet-min.jpg')
+        background: url('https://d39onmifexd5hc.cloudfront.net/website/homepage/hero/student-hero-blue-tablet-min.jpg')
           center
           top/cover
           no-repeat
@@ -858,7 +858,7 @@ video.ipad-device {
 <div class="splash-new">
   <div
     class="splash-container"
-    style="background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/hero/student-hero-blue-desktop-min.jpg')
+    style="background: url('https://d39onmifexd5hc.cloudfront.net/website/homepage/hero/student-hero-blue-desktop-min.jpg')
           center
           top/cover
           no-repeat
@@ -888,17 +888,17 @@ video.ipad-device {
 <div class="perspective-container"> 
 
 
-  <img class="ipad-device the-dang-device" src="/images/ipad-bkg-and-placeholder.png">
+  <img class="ipad-device the-dang-device" src="https://d39onmifexd5hc.cloudfront.net/website/homepage/ipad-bkg-and-placeholder.png">
 
 
   <video class="ipad-device" loop muted autoplay preload="1">
-            <source src="/images/v1.mp4" type="video/mp4">
+            <source src="https://d39onmifexd5hc.cloudfront.net/website/homepage/v1.mp4" type="video/mp4">
   </video>
 
 </div>
 
       <div id="ipadImgContainer">
-        <img id="ipadImg" src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/ipad-compressed-min.png" alt="">
+        <img id="ipadImg" src="https://d39onmifexd5hc.cloudfront.net/website/homepage/ipad-compressed-min.png" alt="">
       </div>
     </div>
 
@@ -918,29 +918,29 @@ video.ipad-device {
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-1.png" alt="" id="districts">
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-1.png" alt="" id="districts">
       </div>
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
-        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-2.png" alt="" id="districts">
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-2.png" alt="" id="districts">
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-3.png" alt="" id="districts">
-      </div>
-    </div>
-
-    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
-      <div>
-        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-4.png" alt="" id="districts">
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-3.png" alt="" id="districts">
       </div>
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-5.png" alt="" id="districts">
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-4.png" alt="" id="districts">
+      </div>
+    </div>
+
+    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
+      <div>
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-5.png" alt="" id="districts">
       </div>
     </div>
 
