update GOOG metadata

--- a/app/views/homepage/components/_headers.erb
+++ b/app/views/homepage/components/_headers.erb
@@ -1,12 +1,12 @@
-<title>ReadUp | Running records scored for you</title>
+<title>ReadUp | The easiest way to assess reading</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-<meta name="description" content="ReadUp listens to elementary students read and creates a full running record for you with miscue analysis, accuracy, fluency rate, and comprehension.">
+<meta name="description" content="ReadUp listens to  students read and creates a full running record for you with accuracy, fluency, miscue analysis, and comprehension.">
 
 
-<meta property="og:title" content="ReadUp | Running records done for you">
-<meta property="og:description" content="ReadUp listens to elementary students read and creates a full running record for you with miscue analysis, accuracy, fluency rate, and comprehension.">
+<meta property="og:title" content="ReadUp | The easiest way to assess reading">
+<meta property="og:description" content="ReadUp listens to  students read and creates a full running record for you with accuracy, fluency, miscue analysis, and comprehension.">
 
 <script async type="text/javascript" src="/js/analytics.js"></script>
