--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -3,8 +3,11 @@
   <head>
 
   <!-- Maybe be repeating this code from _headers.erb  -->
-<title>ReadUp | Running records scored for you</title>
-<meta name="description" content="ReadUp listens to elementary students read and creates a full running record for you with miscue analysis, accuracy, fluency rate, and comprehension.">
+<title>ReadUp | The easiest way to assess reading</title>
+<meta name="description" content="ReadUp listens to  students read and creates a full running record for you with accuracy, fluency, miscue analysis, and comprehension.">
+<meta property="og:title" content="ReadUp | The easiest way to assess reading">
+<meta property="og:description" content="ReadUp listens to  students read and creates a full running record for you with accuracy, fluency, miscue analysis, and comprehension.">
+
   <!-- END Maybe be repeating this code from _headers.erb  -->
 
     <%= csrf_meta_tags %>
