--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -174,6 +174,22 @@
 	font-size: 1.2em;
 }
 
+.ReassessLevelLabel span, .ReassessLevelLabel {
+	margin-top: 8px;
+	font-size: 1.2em;
+
+}
+
+.ReassessLevelLabel span {
+	font-family: 'ProximaNova Semibold';
+	font-size: 1.12em;
+
+}
+
+.ReassessLevelLabel {
+	font-family: 'ProximaNova';
+}
+
 
 .bookInfoHeader {
 	display: flex;
