--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -15,6 +15,10 @@
 
 <style type="text/css">
 
+  body { 
+    font-family: 'Proximanova';
+  }
+
   .form-container {
     position: absolute;
     margin: 0 auto;
@@ -723,6 +727,7 @@
   position: absolute;
   /* top: -23px; */
   width: 270px;
+  z-index: 9;
 }
 
 .rotate {
@@ -863,12 +868,14 @@ a.demo-button button#new-hero-button {
   <div class="perspective-container"> 
 
 
-    <img class="device-image rotate" src="https://d39onmifexd5hc.cloudfront.net/website/homepage/ipad-bkg-and-placeholder.png">
-
-
     <video class="animation-video rotate" loop muted autoplay preload="1">
               <source src="https://d39onmifexd5hc.cloudfront.net/website/homepage/v1.mp4" type="video/mp4">
     </video>
+
+    <img class="device-image rotate" src="https://d39onmifexd5hc.cloudfront.net/website/homepage/ipad-bkg-and-placeholder.png">
+
+
+
 
   </div>
 </div>
