--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -217,29 +217,6 @@
     color:#e2e2e2;
   }
 
-  .step-number-label-left {
-    position: absolute;
-    top: -35px;
-    right: 40px;
-
-    font-size: 4.0em;
-    color: #EDF2F5;
-    z-index: 1;
-
-
-  }
-
-  .step-number-label-right {
-    position: absolute;
-    top: -30px;
-    left: -10px;
-
-    font-size: 4.0em;
-    color: #EDF2F5;
-    z-index: 1;
-
-
-  }
 
   .skew-up {
     transform: skewY(-2deg);
@@ -418,16 +395,7 @@
     .product-text ul p {
       text-align: center;
     }
-    .step-2 {
-      padding-top: 1em;
-    }
 
-    .step-number-label-right {
-      left: -30px;
-    }
-    .step-number-label-left {
-      right: -30px;
-    }
 
     #demoButton2 {
       display: block;
@@ -716,7 +684,7 @@
   position: absolute;
 
   width: 300px;
-  z-index: -1;
+  z-index: 1;
 
 }
 
@@ -725,13 +693,14 @@
   left: 50%;
   margin-left: -121px;
   position: absolute;
-  /* top: -23px; */
   width: 270px;
   z-index: 9;
 }
 
 .rotate {
-  -webkit-transform: rotateX(2deg) rotateY(-16deg);
+/*  -webkit-transform: rotateX(2deg) rotateY(-16deg);
+*/    
+
     transform: rotateX(-4deg) rotateY(-21deg);  
 }
 
@@ -753,12 +722,12 @@ a.demo-button button#new-hero-button {
 {
   .device-image {
     width: 300px;
-    z-index: -1;
+    z-index: 1;
 
   }
 
   .animation-video {
-    width: 275px;
+    width: 270px;
   }
 
   .device-image {
@@ -867,12 +836,11 @@ a.demo-button button#new-hero-button {
 <div class="animation-container pure-u-1 pure-u-md-1-3"> 
   <div class="perspective-container"> 
 
+    <img class="device-image rotate" src="https://d39onmifexd5hc.cloudfront.net/website/homepage/ipad-bkg-and-placeholder.png">
 
     <video class="animation-video rotate" loop muted autoplay preload="1">
               <source src="https://d39onmifexd5hc.cloudfront.net/website/homepage/v1.mp4" type="video/mp4">
     </video>
-
-    <img class="device-image rotate" src="https://d39onmifexd5hc.cloudfront.net/website/homepage/ipad-bkg-and-placeholder.png">
 
 
 
