--- a/app/views/layouts/transcriber_interface.erb
+++ b/app/views/layouts/transcriber_interface.erb
@@ -5,9 +5,9 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', async: true%>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload'%>
 
-    <%= javascript_include_tag "https://use.fontawesome.com/d79995f506.js", async: true %>
+    <%= javascript_include_tag "https://use.fontawesome.com/d79995f506.js" %>
 
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" %>
 
