link assessments to users

--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -41,6 +41,11 @@
 
 }
 
+
+.leftButtonContainer, .rightButtonContainer {
+	margin-top: 30%;
+}
+
 .bookpageContainer {
 	width: 400px;
 	height: 80%;
