margin top changed on header

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -766,7 +766,11 @@ a.demo-button button#new-hero-button {
   }
 
   #myTitleText h1, #myTitleText h4 {
-  text-align: left;
+    text-align: left;
+  }
+
+  #myTitleText h1 {
+    margin-top: 0.4em;
   }
 
 
