--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -47,6 +47,7 @@
    font-size: 20px;
    margin-bottom: 45px;
    font-family: 'Proximanova';
+   font-weight: 100;
    color: white;
    line-height: 1.85;
  }
