subpitch lang change

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -823,7 +823,7 @@ a.demo-button button#new-hero-button {
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp listens to students read and then it scores a full running record for you with fluency, accuracy, comprehension, miscue analysis, and a recording 
+            ReadUp's reading specialists listen to students read and score a full running record for you with fluency, accuracy, comprehension, miscue analysis, and a recording 
            </h4>
       <a class="demo-button" href="/student_dashboard/#/story/demo">
         <button class="primary-btn" id="new-hero-button" onclick="demoClicked()"> 
