--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -934,10 +934,18 @@ a.demo-button button#new-hero-button {
     var icon = document.getElementById("btn-icon");
     icon.className += " fa-spinner faa-spin";
     icon.classList.remove("faa-pulse");
+ 
 
-
-
+     $.ajax({
+        url: '/auth/phil_setup_demo',
+        type: 'post',
+      }).fail(function(xhr, status, err) {
+        console.log(err)
+      })
   }
+
+
+ 
 
 
 
