Slight tweaks to clean up

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -14,12 +14,12 @@ body {
 
 #transcriberInterfaceContainer {
   height: 100%;
-  font-family: Conv_proximanova-regular-webfont;
+  font-family: 'Proximanova';
 }
 
 #reportsInterfaceContainer {
   height: 100%;
-  font-family: Conv_proximanova-regular-webfont;
+  font-family: 'Proximanova';
 }
 
 p, ol, ul, td {
