--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("ReportsInterface", props: @reports_interface_props, prerender: false,  id: 'reportsInterfaceContainer') %>
+<%= react_component("ReportWithScorer", props: @reports_interface_props, prerender: false,  id: 'reportsInterfaceContainer') %>
