--- a/client/src/ReportWithScorer/styles.css
+++ b/client/src/ReportWithScorer/styles.css
@@ -1,10 +1,58 @@
+body {
+	background-color: #FCFAFA;
+}
+
+.profileContainer {
+	width: 23%;
+    display: inline-block;
+    height: 510px;
+    text-align: center;
+}
+
+.profileContainer h3 {
+	margin-top: 5.5em;
+	font-weight: 900;
+	font-size: 23px;
+}
+
+.profileContainer img { 
+	width: 160px;
+}
+
+.profileContainer h4 { 
+	font-weight: 900;
+	font-size: 17px;
+	font-family: 'ProximaNova';
+}
+
+.profileContainer h5 {
+	font-weight: 100;
+	margin-top: 14px;
+	font-size: 13px;
+	color: grey;
+}
+
+.profileContainer img {
+	margin: 12px 0px;
+}
+
+.scorerQuestionButton {
+	width: 180px;
+	height: 35px;
+}
+
+
 .container { 
 	float: right;
-    margin-right: 40px;
-    margin-top: 90px;
+    margin-top: 57px;
     width: 75%;
-	height: 500px;
-	overflow: scroll;
-	border:2px solid #2f2f2f;
+	height: 640px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	display: inline-block;
+
+-webkit-box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31);
+-moz-box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31);
+box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31);
 
 }
