--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -52,8 +52,14 @@
 	padding: 70px 110px;
 	padding-right: 35px;
 	padding-top: 130px;
-
 	max-width: 1025px;
+	background-color: white;
+
+/*THIS ONLY APPLIES FOR SCORER PROFILE VIEW*/
+-webkit-box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31);
+    -moz-box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31);
+    box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31)
+
 }
 
 
