--- a/client/src/ReportWithScorer/styles.css
+++ b/client/src/ReportWithScorer/styles.css
@@ -1,12 +1,15 @@
 body {
-	background-color: #FCFAFA;
+	height: 100%
 }
 
 .profileContainer {
 	width: 23%;
     display: inline-block;
-    height: 510px;
+    height: 100vh;
     text-align: center;
+    -webkit-box-shadow: 0px 0px 16px 2px rgba(0,0,0,0.31);
+    box-shadow: 0px 0px 16px 2px rgba(0,0,0,0.31);
+    background-color: #FCFAFA;
 }
 
 .profileContainer h3 {
@@ -44,15 +47,10 @@ body {
 
 .container { 
 	float: right;
-    margin-top: 57px;
     width: 75%;
-	height: 640px;
+	height: 100vh;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	display: inline-block;
-
--webkit-box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31);
--moz-box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31);
-box-shadow: inset 0px 0px 16px 2px rgba(0,0,0,0.31);
 
 }
