--- a/client/src/TranscriberInterface/styles.css
+++ b/client/src/TranscriberInterface/styles.css
@@ -8,7 +8,8 @@ body {
 	padding-top: 50px;
 	padding-bottom: 50px;*/
 	padding: 50px;
-	padding-top: 20px;
+	padding-top: 40px;
+	padding-left: 90px
 }
 
 .gradingViewLabel {
@@ -60,6 +61,11 @@ body {
 
 .submitButton {
 	width: 120px;
+}
+
+.alertSuccess {
+	width: 320px;
+	margin-top: 15px;
 }
 
 
