new districts that can be trusted

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -867,7 +867,7 @@ a.demo-button button#new-hero-button {
 
 <div class="content-container"> 
   <div class='section-buffer'></div>
-  <h1 id="educatorTrustTitle"> Trusted by thousands of educators </h1>
+  <h1 id="educatorTrustTitle"> Trusted by educators across the country</h1>
 </div>
 
 <section class="district-section">
@@ -875,29 +875,29 @@ a.demo-button button#new-hero-button {
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-1.png" alt="" id="districts">
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/new/district-1.jpg" alt="" id="districts">
       </div>
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
-        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-2.png" alt="" id="districts">
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/new/district-2.jpg" alt="" id="districts">
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-3.png" alt="" id="districts">
-      </div>
-    </div>
-
-    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
-      <div>
-        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-4.png" alt="" id="districts">
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/new/district-3.jpg" alt="" id="districts">
       </div>
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/district-5.png" alt="" id="districts">
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/new/district-4.jpg" alt="" id="districts">
+      </div>
+    </div>
+
+    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
+      <div>
+        <img src="https://d39onmifexd5hc.cloudfront.net/website/homepage/districts/new/district-5.jpg" alt="" id="districts">
       </div>
     </div>
 
