dynamically scale the font on homepage to avoid breakage

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -572,9 +572,6 @@
 
 
 
-  .splash-new .splash-container .title h1 {
-    font-size: 1.9em;
-  }
 
   h4#sub-pitch {
     font-size: 18px;
@@ -796,6 +793,17 @@ a.demo-button button#new-hero-button {
   }
 }
 
+
+@media (max-width: 768px) {
+
+
+  #myTitleText h1 {
+    font-size: 2.1em;
+    font-size: 6vw;
+  }
+
+
+}
 
 
 
