--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -411,7 +411,7 @@ span.missed, span.correct {
 }
 
 .pricingFooterButton {
-    width: 170px;
+    min-width: 170px;
     height: 50px;
     margin: 0 auto;
     display: block;
