--- a/client/src/ReportWithScorer/styles.css
+++ b/client/src/ReportWithScorer/styles.css
@@ -7,6 +7,7 @@ body {
 	width: 23%;
     display: inline-block;
     height: 100vh;
+    min-height: 680px;
     text-align: center;
     -webkit-box-shadow: 0px 0px 16px 2px rgba(0,0,0,0.31);
     box-shadow: 0px 0px 16px 2px rgba(0,0,0,0.31);
