--- a/client/src/StudentDashboard/modals/CompModal/styles.css
+++ b/client/src/StudentDashboard/modals/CompModal/styles.css
@@ -2,3 +2,26 @@
   margin: 0 auto;
   margin-top: 30px;
 }
+
+.compModal{
+  margin-top: 100px;
+}
+
+.compModalHeader {
+    background-color: #f5f5f5;
+    border-color: #ddd;
+    color: #565656;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+    padding: 45px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.compModalBody {
+  display: flex;
+  justify-content: center;
+}
+
+
