--- a/client/src/StudentDashboard/components/BackArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/BackArrowButton/styles.css
@@ -13,8 +13,6 @@
 
 	background-image: url(/images/dashboard/blue-arrow.svg);
 	background-size: 100% 100%;
-	-webkit-filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.76));
-	filter:         drop-shadow(0px 0px 5px rgba(0,0,0,0.76)); 
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
@@ -24,10 +22,18 @@
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+
+    transition: all .3s;
+
+
 }
 
 .arrowButtonContainer:hover {
-	color: lightgray;
+	transform: translateY(-3px);
+    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+    filter: brightness(120%);
+    transition: all .3s;
+
 }
 
 .arrowButtonContainer:active {
