--- a/client/src/StudentDashboard/components/ForwardArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/ForwardArrowButton/styles.css
@@ -13,8 +13,7 @@
 
 	background-image: url(/images/dashboard/green-arrow.svg);
 	background-size: 100% 100%;
-    -webkit-filter: drop-shadow(0px 2px 25px rgba(0,0,0,0.66));
-    filter: drop-shadow(0px 2px 25px rgba(0,0,0,0.66));
+
 	/*box-shadow: 10px 10px 51px 1px rgba(0,0,0,0.76);*/
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
@@ -25,10 +24,19 @@
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+
+
+    transition: all .3s;
+
+
 }
 
 .arrowButtonContainer:hover {
-	color: lightgray;
+
+	transform: translateY(-3px);
+    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+    filter: brightness(120%);
+    transition: all .3s;
 }
 
 .arrowButtonContainer:active {
