--- a/client/src/StudentDashboard/components/RectangleButton/styles.css
+++ b/client/src/StudentDashboard/components/RectangleButton/styles.css
@@ -19,10 +19,19 @@
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+
+    box-shadow: 0 2px 3px 0 rgba(0,0,0,.275);
+    transition: all .3s;
+                            
 }
 
 .rectangleButtonContainer:hover {
-	color: lightgray;
+	transform: translateY(-3px);
+    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+    filter: brightness(120%);
+    transition: all .3s;
+
+
 }
 
 .rectangleButtonContainer:active {
