--- a/client/src/StudentDashboard/modals/CompModal/styles.css
+++ b/client/src/StudentDashboard/modals/CompModal/styles.css
@@ -1,6 +1,5 @@
 .compRecordButton {
-  margin: 0 auto;
-  margin-top: 30px;
+  box-shadow: 0 2px 3px 0 rgba(0,0,0,.275);
 }
 
 .compModal{
@@ -13,15 +12,28 @@
     color: #565656;
     background-color: #f5f5f5;
     border-color: #ddd;
-    padding: 45px;
+    padding: 40px 55px;
     display: flex;
     justify-content: center;
+    border-radius: 4px;
+    flex-flow: column;
 
 }
 
+.compModalHeader h4 {
+    text-align: center;
+    line-height: 1.75;
+}
+
+.compModalHeader h4.compSubTitle {
+  font-weight: 100;
+}
+
+
 .compModalBody {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  padding: 45px 0px 30px;
 }
 
 
