UX working great

--- a/client/src/StudentDashboard/modals/CompModal/styles.css
+++ b/client/src/StudentDashboard/modals/CompModal/styles.css
@@ -23,10 +23,11 @@
 .compModalHeader h4 {
     text-align: center;
     line-height: 1.75;
+    font-family: 'ProximaNova SemiBold'
 }
 
 .compModalHeader h4.compSubTitle {
-  font-weight: 100;
+  font-family: 'ProximaNova'
 }
 
 
