--- a/client/src/StudentDashboard/components/NavigationBar/styles.css
+++ b/client/src/StudentDashboard/components/NavigationBar/styles.css
@@ -5,7 +5,7 @@
 .navContainer {
 	display: flex;
 	height: 60px;
-	background-color: #3C8FCA;
+	background-color: #143145;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
