hides bookinfoheader on comprehension

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -10,6 +10,8 @@ body {
 #studentDashboardContainer {
   height: 100%;
   font-family: 'Proximanova';
+  letter-spacing: .05em;
+
 }
 
 #transcriberInterfaceContainer {
